--- a/WebApiLogistica/WebApiLogistica/bin/WebApiLogistica.dll.config
+++ b/WebApiLogistica/WebApiLogistica/bin/WebApiLogistica.dll.config
@@ -62,7 +62,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings><add name="LogisticaEntities" connectionString="metadata=res://*/Data.Modelo.Model1.csdl|res://*/Data.Modelo.Model1.ssdl|res://*/Data.Modelo.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LuisMosquera\SQL2012;initial catalog=Logistica;persist security info=True;user id=sa;password=sa;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings><system.webServer>
+  <connectionStrings><add name="LogisticaEntities" connectionString="metadata=res://*/Data.Modelo.Model1.csdl|res://*/Data.Modelo.Model1.ssdl|res://*/Data.Modelo.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LuisMosquera\SQL2012;initial catalog=Logistica;persist security info=True;user id=sa;password=sa;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings><system.webServer>
+  <!--<connectionStrings><add name="LogisticaEntities" connectionString="metadata=res://*/Data.Modelo.Model1.csdl|res://*/Data.Modelo.Model1.ssdl|res://*/Data.Modelo.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-QGUF4LF/Jeisson Bernal;initial catalog=Logistica;persist security info=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings><system.webServer>-->
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
